--- a/src/main/resources/templates/ws2.html
+++ b/src/main/resources/templates/ws2.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title th:text="${plugin}"></title>
+  <title th:text="${plugin + ' | Log'}"></title>
   <link rel="stylesheet" type="text/css" href="css/normalize.css" />
   <link rel="stylesheet" type="text/css" href="css/demo.css" />
   <link rel="stylesheet" type="text/css" href="css/icons.css" />
@@ -30,12 +30,12 @@
       <input type="checkbox" checked="checked" id="warn" /><label for="warn" style="color: orange">[WARN] </label>&nbsp;
       <input type="checkbox" checked="checked" id="error" /><label for="error" style="color: orangered">[ERROR]</label>&nbsp;
     </div>
-    <div style="font-size: 34px;">${plugin}&nbsp;/&nbsp;${version}&nbsp;/&nbsp;<span id="state" style="font-size: 20px;"></span></div>
+    <div style="font-size: 34px;" th:text="${plugin + ' / ' + version}"></div>
     <p class="codrops-links">
       <a class="codrops-icon codrops-icon-prev" href="status"><span>Config</span></a>
       <a class="codrops-icon codrops-icon-prev" href="moniter"><span>Moniter</span></a>
       <a class="codrops-icon codrops-icon-drop" href="2json"><span>2JSON</span></a>
-      <a class="codrops-icon codrops-icon-drop" href="swagger" target="_blank"><span>Swagger</span></a>
+      <a class="codrops-icon codrops-icon-drop" href="swagger-ui.html" target="_blank"><span>Swagger</span></a>
       <a class="codrops-icon codrops-icon-drop" href="sync"><span>Sync</span></a>
     </p>
     <div id="output"></div>
