--- a/src/main/resources/templates/ws2.html
+++ b/src/main/resources/templates/ws2.html
@@ -5,11 +5,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title th:text="${plugin + ' | Log'}"></title>
-  <link rel="stylesheet" type="text/css" href="css/normalize.css" />
-  <link rel="stylesheet" type="text/css" href="css/demo.css" />
-  <link rel="stylesheet" type="text/css" href="css/icons.css" />
-  <link rel="stylesheet" type="text/css" href="css/style3.css" />
-  <script src="js/modernizr.custom.js"></script>
+  <link rel="stylesheet" type="text/css" th:href="@{/css/normalize.css}" />
+  <link rel="stylesheet" type="text/css" th:href="@{/css/demo.css}" />
+  <link rel="stylesheet" type="text/css" th:href="@{/css/icons.css}" />
+  <link rel="stylesheet" type="text/css" th:href="@{/css/style3.css}" />
+  <script th:src="@{/js/modernizr.custom.js}"></script>
 </head>
 <body>
 <div class="container">
@@ -42,9 +42,9 @@
   </header>
 </div><!-- /container -->
 </body>
-<script src="/js/sockjs.min.js"></script>
-<script src="/js/stomp.min.js"></script>
-<script src="/js/log.js"></script>
+<script th:src="@{/js/sockjs.min.js}"></script>
+<script th:src="@{/js/stomp.min.js}"></script>
+<script th:src="@{/js/log.js}"></script>
 <script type="text/javascript">
     //   var url = "ws://${host}:${port}/log";
     window.addEventListener("load", init, false);
